--- a/style.css
+++ b/style.css
@@ -4,12 +4,35 @@ img {
 }
 
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, sans-serif, Arial;
+    font-family: Quicksand;
     background-color: #e1f5fe;
     /* Cor de fundo azul claro */
     color: #333;
     margin: 0;
     padding: 0;
+    /* From Uiverse.io by csemszepp */
+
+    width: 100%;
+    height: 100%;
+    --s: 200px;
+    /* control the size */
+    /* --c1: #1d1d1d;
+    --c2: #4e4f51;
+    --c3: #3c3c3c; */
+    --c1: #979797;
+    --c2: #adadad;
+    --c3: #c9c9c9;
+
+    background: repeating-conic-gradient(from 30deg,
+            #0000 0 120deg,
+            var(--c3) 0 180deg) calc(0.5 * var(--s)) calc(0.5 * var(--s) * 0.577),
+        repeating-conic-gradient(from 30deg,
+            var(--c1) 0 60deg,
+            var(--c2) 0 120deg,
+            var(--c3) 0 180deg);
+    background-size: var(--s) calc(var(--s) * 0.577);
+
+
 }
 
 .container {
@@ -44,11 +67,10 @@ select {
 
 
 
-button {
+/* button {
     width: 100%;
     padding: 15px;
     background-color: #ffca28;
-    /* Cor do botão amarelo */
     border: none;
     border-radius: 4px;
     color: #333;
@@ -59,6 +81,62 @@ button {
 
 button:hover {
     background-color: #ffa000;
+} */
+
+/* From Uiverse.io by adamgiebl */
+.cssbuttons-io-button {
+    background: #658bdd;
+    color: white;
+    font-family: inherit;
+    width: 25%;
+    margin: 0 auto;
+    padding-left: 1.2em;
+    font-size: 17px;
+    font-weight: 500;
+    border-radius: 0.9em;
+    border: none;
+    letter-spacing: 0.05em;
+    display: flex;
+    align-items: center;
+    box-shadow: inset 0 0 1.6em -0.6em #714da6;
+    overflow: hidden;
+    position: relative;
+    height: 2.8em;
+    padding-right: 3.3em;
+    cursor: pointer;
+}
+
+.cssbuttons-io-button .icon {
+    background: white;
+    margin-left: 1em;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.2em;
+    width: 2.2em;
+    border-radius: 0.7em;
+    box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+    right: 0.3em;
+    transition: all 0.3s;
+}
+
+.cssbuttons-io-button:hover .icon {
+    width: calc(100% - 0.6em);
+}
+
+.cssbuttons-io-button .icon svg {
+    width: 1.1em;
+    transition: transform 0.3s;
+    color: #7b52b9;
+}
+
+.cssbuttons-io-button:hover .icon svg {
+    transform: translateX(0.1em);
+}
+
+.cssbuttons-io-button:active .icon {
+    transform: scale(0.95);
 }
 
 input[type="checkbox"] {
@@ -67,4 +145,10 @@ input[type="checkbox"] {
 
 input[type="radio"] {
     width: 20px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    /* Centraliza horizontalmente */
 }
