--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ button:hover {
     letter-spacing: 0.05em;
     display: flex;
     align-items: center;
-    box-shadow: inset 0 0 1.6em -0.6em #714da6;
+    box-shadow: inset 0 0 1.6em -0.6em hsl(219, 100%, 56%);
     overflow: hidden;
     position: relative;
     height: 2.8em;
@@ -116,7 +116,7 @@ button:hover {
     height: 2.2em;
     width: 2.2em;
     border-radius: 0.7em;
-    box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+    box-shadow: 0.1em 0.1em 0.6em 0.2em hsl(219, 100%, 56%);
     right: 0.3em;
     transition: all 0.3s;
 }
@@ -128,7 +128,7 @@ button:hover {
 .cssbuttons-io-button .icon svg {
     width: 1.1em;
     transition: transform 0.3s;
-    color: #7b52b9;
+    color: #246aff;
 }
 
 .cssbuttons-io-button:hover .icon svg {
